tests/specs/ecosystem/radix_ui_fork/rect/0_0_5.test
radix-ui-fork/rect/0.0.5
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS2304 [ERROR]: Cannot find name 'ClientRect'.
  getBoundingClientRect(): ClientRect;
                           ~~~~~~~~~~
    at file://<tmpdir>/src/observeElementRect.ts:2:28

TS2304 [ERROR]: Cannot find name 'ClientRect'.
type CallbackFn = (rect: ClientRect) => void;
                         ~~~~~~~~~~
    at file://<tmpdir>/src/observeElementRect.ts:11:26

Found 2 errors.

